Fixed gap between banner and footer on Home page

--- a/src/containers/Website/Home/Home.module.css
+++ b/src/containers/Website/Home/Home.module.css
@@ -1,3 +1,12 @@
+.home {
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  align-items: center;
+}  
+
+
+
 .home img {
   /*top: 0;
   left:0;
@@ -12,7 +21,7 @@
   align-items: center;*/
   /* Set rules to fill background */
   opacity: .75;
-  min-height: 100%;
+  /* min-height: 100%; */
   min-width: 1024px;
 	
   /* Set up proportionate scaling */
@@ -20,9 +29,9 @@
   height: auto;
 	
   /* Set up positioning */
-  
   top: 0;
   left: 0;
+
 }
 
 
