--- a/src/containers/Website/Podcast/Podcast.module.css
+++ b/src/containers/Website/Podcast/Podcast.module.css
@@ -1,7 +1,6 @@
 .podcast {
     display: flex;
     height: 100%;
-    display: flex;
     flex-direction: column;
     align-items: center;
     height: 100vh;
