--- a/src/containers/Website/Website.css
+++ b/src/containers/Website/Website.css
@@ -7,7 +7,6 @@
   }
   
 .home {
-  /*flex-grow: 1; why messing up other pages?!*/
   height: 100vh;
   }
 
@@ -15,4 +14,3 @@
     opacity: 1;
     z-index: 2;
   }
-  @media 
